# BAM

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml
CODE/: compat.h
CODE/SRC/: BAM.CPP  BAM.MAK  BAMF.MAK  FLICSMK.CPP  INSTALL.CPP  INSTALL.MAK  LASTMSG.CPP  MAKEMIF.CPP  MAKEMIF.MAK  MAPEDIT.CPP  MAPEDIT.MAK  SHOWXFLI.CPP  SHOWXFLI.MAK  STRIPLIN.CPP  TIL2TLB.MAK  TXT2SQB.MAK  VIEWPORT.CPP  VSWITCH.CPP  flicsmk.hpp  sdl_flic.cpp
CODE/TIGRE/: 8track.hpp  API.CPP  APIEVT.HPP  APIGRAPH.HPP  APIMEM.HPP  BKP.BAT  COMM.CPP  COMM.HPP  DPMI.CPP  DPMI.HPP  ERR  EVENTMGR.CBK  EVENTMGR.CPP  EVENTMGR.HPP  FILE.HPP  GRAPHMGR.CPP  GRAPHMGR.HPP  M.BAT  MAKERES.CPP  MODEM.CPP  MODEX.HPP  MONO.CPP  MOUSE.CPP  MOUSE.HPP  OS.CPP  OS.HPP  OSGRAPH.CPP  OS_STUB.CPP  PALETTE.HPP  RESMGR.CPP  RESMGR.HPP  SAVEMGR.HPP  SCRIMAGE.HPP  SERIAL.CPP  SOUNDMGR.CPP  TIGRE.MAK  TW.H  TYPES.HPP  WRITERES.HPP  XMODDISP.CPP  (+86 more)
stubs/SDL2/: SDL.h
tests/: CMakeLists.txt  test_init.cpp
