cmake_minimum_required(VERSION 3.20)
project(bam LANGUAGES CXX)

set(GAME_SOURCES
    CODE/SRC/AI.CPP
    CODE/SRC/ASSESS.CPP
    CODE/SRC/BAM.CPP
    CODE/SRC/BAM_DG.CPP
    CODE/SRC/BAMFUNCS.CPP
    CODE/SRC/BAMFUNC2.CPP
    CODE/SRC/BAMGUY.CPP
    CODE/SRC/BAMPOPUP.CPP
    CODE/SRC/BAMROOM.CPP
    CODE/SRC/CINE.CPP
    CODE/SRC/CHOOSE.CPP
    CODE/SRC/CREDITS.CPP
    CODE/SRC/DEATH.CPP
    CODE/SRC/ENCYCLO.CPP
    CODE/SRC/ENCYMENU.CPP
    CODE/SRC/FADE.CPP
    CODE/SRC/FLICSMK.CPP
    CODE/SRC/FMT_LBM.CPP
    CODE/SRC/HALL.CPP
    CODE/SRC/INTROHAL.CPP
    CODE/SRC/ITEMS.CPP
    CODE/SRC/LEGENDOP.CPP
    CODE/SRC/MAINMENU.CPP
    CODE/SRC/MAKECHAR.CPP
    CODE/SRC/MAPS.CPP
    CODE/SRC/MAPSBASE.CPP
    CODE/SRC/NETCHAR.CPP
    CODE/SRC/NETHALL.CPP
    CODE/SRC/NETSTORY.CPP
    CODE/SRC/OPTION.CPP
    CODE/SRC/OPTION2.CPP
    CODE/SRC/OPTION3.CPP
    CODE/SRC/PATHER.CPP
    CODE/SRC/SAVEMENU.CPP
    CODE/SRC/SNAP.CPP
    CODE/SRC/SPENDEXP.CPP
    CODE/SRC/STORY.CPP
    CODE/SRC/TUTORIAL.CPP
    CODE/SRC/UNITS.CPP
    CODE/SRC/UNITLIB.CPP
    CODE/SRC/VIEWPORT.CPP
    CODE/SRC/WINLOSE.CPP
    CODE/SRC/WINLOSE2.CPP
    CODE/SRC/WORLD.CPP
    CODE/SRC/WORLDMAP.CPP
)

add_executable(bam ${GAME_SOURCES})

target_include_directories(bam PRIVATE CODE/SRC CODE/TIGRE)

find_package(SDL2 REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(ENet REQUIRED)
find_package(ZLIB REQUIRED)

# Link against open-source replacements for the original proprietary libs
target_link_libraries(bam PRIVATE SDL2::SDL2 SDL2_mixer::SDL2_mixer ENet::ENet ZLIB::ZLIB)
