cmake_minimum_required(VERSION 3.20)
project(bam LANGUAGES CXX)

enable_testing()

set(GAME_SOURCES
    CODE/SRC/AI.CPP
    CODE/SRC/ASSESS.CPP
    CODE/SRC/BAM.CPP
    CODE/SRC/BAM_DG.CPP
    CODE/SRC/BAMFUNCS.CPP
    CODE/SRC/BAMFUNC2.CPP
    CODE/SRC/BAMGUY.CPP
    CODE/SRC/BAMPOPUP.CPP
    CODE/SRC/BAMROOM.CPP
    CODE/SRC/CINE.CPP
    CODE/SRC/CHOOSE.CPP
    CODE/SRC/CREDITS.CPP
    CODE/SRC/DEATH.CPP
    CODE/SRC/ENCYCLO.CPP
    CODE/SRC/ENCYMENU.CPP
    CODE/SRC/FADE.CPP
    CODE/SRC/FLICSMK.CPP
    CODE/SRC/FMT_LBM.CPP
    CODE/SRC/HALL.CPP
    CODE/SRC/INTROHAL.CPP
    CODE/SRC/ITEMS.CPP
    CODE/SRC/LEGENDOP.CPP
    CODE/SRC/MAINMENU.CPP
    CODE/SRC/MAKECHAR.CPP
    CODE/SRC/MAPS.CPP
    CODE/SRC/MAPSBASE.CPP
    CODE/SRC/NETCHAR.CPP
    CODE/SRC/NETHALL.CPP
    CODE/SRC/NETSTORY.CPP
    CODE/SRC/OPTION.CPP
    CODE/SRC/OPTION2.CPP
    CODE/SRC/OPTION3.CPP
    CODE/SRC/PATHER.CPP
    CODE/SRC/SAVEMENU.CPP
    CODE/SRC/SNAP.CPP
    CODE/SRC/SPENDEXP.CPP
    CODE/SRC/STORY.CPP
    CODE/SRC/TUTORIAL.CPP
    CODE/SRC/UNITS.CPP
    CODE/SRC/UNITLIB.CPP
    CODE/SRC/VIEWPORT.CPP
    CODE/SRC/WINLOSE.CPP
    CODE/SRC/WINLOSE2.CPP
    CODE/SRC/WORLD.CPP
    CODE/SRC/WORLDMAP.CPP
)

add_executable(bam ${GAME_SOURCES})

target_include_directories(bam PRIVATE CODE/SRC CODE/TIGRE)
target_compile_definitions(bam PRIVATE OS_SDL)

  add_library(tigre STATIC
      CODE/TIGRE/sdl_modex.cpp
      CODE/TIGRE/sdl_platform.cpp
      CODE/TIGRE/pentimer.cpp
      CODE/TIGRE/sdl_mouse.cpp
      CODE/TIGRE/sdl_sound.cpp
      CODE/TIGRE/API.CPP
    CODE/TIGRE/GRAPHMGR.CPP
    CODE/TIGRE/SCRIMAGE.CPP
    CODE/TIGRE/PALETTE.CPP
    CODE/TIGRE/RECT.CPP
    CODE/TIGRE/LIST.CPP
    CODE/TIGRE/sdl_eventmgr.cpp
    CODE/TIGRE/RESOURCE.CPP
    CODE/TIGRE/MANAGER.CPP
    CODE/TIGRE/APIRES.CPP
    CODE/TIGRE/APIFONT.CPP
    CODE/TIGRE/APIGRAPH.CPP
    CODE/TIGRE/APIDLG.CPP
    CODE/TIGRE/APIEVT.CPP
    CODE/TIGRE/APIMEM.CPP
    CODE/TIGRE/CLIPRECT.CPP
    CODE/TIGRE/CONTEXT.CPP
    CODE/TIGRE/FILE.CPP
    CODE/TIGRE/FONTMGR.CPP
    CODE/TIGRE/GRECT.CPP
    CODE/TIGRE/MEM.CPP
    CODE/TIGRE/MEMMGR.CPP
    CODE/TIGRE/OBJMGR.CPP
    CODE/TIGRE/RLE.CPP
    CODE/TIGRE/SRLE.CPP
    CODE/TIGRE/TRLE.CPP
    CODE/TIGRE/STREAM.CPP
    CODE/TIGRE/RESMGR.CPP
    CODE/TIGRE/SAVEMGR.CPP
    CODE/TIGRE/SAVEBASE.CPP
    CODE/TIGRE/DEBUG.CPP
    CODE/TIGRE/HEAP.CPP
    CODE/TIGRE/PERIODIC.CPP
    CODE/TIGRE/OBJECT.CPP
    CODE/TIGRE/CONFIG.CPP
    CODE/TIGRE/CLOCK.CPP
    CODE/TIGRE/OS_STUB.CPP
)
target_include_directories(tigre PUBLIC CODE/TIGRE)
target_compile_definitions(tigre PUBLIC OS_SDL)
find_package(SDL2)
if(SDL2_FOUND)
    target_link_libraries(tigre PUBLIC SDL2::SDL2)
else()
    add_library(SDL2_stub INTERFACE)
    add_library(SDL2::SDL2 ALIAS SDL2_stub)
    target_include_directories(SDL2_stub INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/stubs)
    target_link_libraries(tigre PUBLIC SDL2::SDL2)
endif()

target_link_libraries(bam PRIVATE SDL2::SDL2 tigre)

add_subdirectory(tests)
